Define min-height for main element for full screen mobiles and larger to avoid the footer jumping up and down during the game

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -442,6 +442,10 @@ nav {
     margin-right: 2rem;
 }
 
+main {
+    min-height: 366px;
+}
+
 .scroll-down-arrow {
     bottom: 24%;
 }
